# ForestUAV

./: .gitignore  create_dummy_data.py  download_coco128.py  prepare_fire_dataset.py  pyproject.toml  start_inference.sh  start_training.sh  train.py  train_yolov7.py  verify_custom_modules.py
cfg/training/: train.yaml
data/: coco128.yaml  dummy.yaml  fire.yaml
models/: custom_modules.py  yolo.py
utils/: datasets.py
